--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@
 
 .byebug_history
 
-.env
-.env.development
+/.env
+/.env.development
 
 # Ignore public/uploads (shrine uploaded files)
 /public/uploads/
